Update syntax for AsciiDoctor

--- a/methods_available_for_automation/Methods_Available_for_Automation.adoc
+++ b/methods_available_for_automation/Methods_Available_for_Automation.adoc
@@ -1,11 +1,11 @@
-Methods Available for Automation
-================================
+= Methods Available for Automation
+//{product-author}
+//{product-version}
+:data-uri:
 :numbered:
-:toc:
+:toc: macro
+:toc-title:
 :toclevels: 3
-
-// only numbered seems to work when placed in Header. Build using command:
-// asciidoc -a toc -n -a toclevels=3 Methods_Available_for_Automation.ad
 
 .Abstract
 This guide provides advanced methods for ManageIQ's
@@ -15,8 +15,9 @@ this book are relevant to ManageIQ administrators.
 This document is organized by the object hierarchy in the Automate
 Model.
 
-Terminology
------------
+toc::[]
+
+== Terminology
 
 Account Role::
   A designation assigned to a user allowing or restricting a user to
@@ -161,15 +162,13 @@ Zones::
   location, network location, or function. When first started, new
   servers are put into the default zone.
 
-Methods Available for Use with ManageIQ
------------------------------------------------------------
+== Methods Available for Use with ManageIQ
 Methods can be used from within ManageIQ to create
 custom actions and workflows for the objects managed for your ManageIQ Infrastructure. This document describes the methods
 available for use in ManageIQ. This document is
 organized by the object hierarchy in the Automate Model.
 
-$evm.root
-~~~~~~~~~
+=== $evm.root
 When an Automate method is launched, it has one global variable: `$evm`.
 The `$evm` variable allows the method to communicate back to ManageIQ. The `$evm.root` is the root object in the workspace,
 it provides access to the data currently loaded in the ManageIQ model. It use the objects data to solve more complex
@@ -229,8 +228,7 @@ passed into the dumpServer method.
 [----] I, [2012-10-23T13:53:54.537772 #5320:f329024]  INFO -- : <User-Defined Method>
 ----
 
-Method Hierarchy
-~~~~~~~~~~~~~~~~
+=== Method Hierarchy
 The Automate Model inline methods have a hierarchy. The sublevels in the
 hierarchy have access to the methods for itself and the levels above it.
 For example, Red Hat Hosts have access to the Red Hat Host methods, Host
@@ -354,8 +352,7 @@ Methods without links do not have any additional methods.
 ***** Vmware (vm_vmware)
 ** Windows Images (windows_images) - <<Windows Image (windows_image),Windows Image (windows_image)>>
 
-[[Base Methods]] Base Methods
-~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
+=== Base Methods
 These methods may be used with all objects available in the Automate
 Model.
 
@@ -436,8 +433,7 @@ rescue => err
 end
 ----
 
-[[Availability Zones (availability_zone)]] Availability Zones (availability_zone)
-~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
+=== Availability Zones (availability_zone)
 [options="header"]
 |====================================================================
 |Method                     |Use
@@ -447,8 +443,7 @@ end
 |cloud_subnets              |Returns object's cloud subnets
 |====================================================================
 
-[[Classifications (classification)]] Classifications (classification)
-~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
+=== Classifications (classification)
 [options="header"]
 |====================================================================
 |Method                     |Use
@@ -459,8 +454,7 @@ end
 |to_tag                     |Returns object's tag mapping
 |====================================================================
 
-[[Cloud Networks (cloud_network)]] Cloud Networks (cloud_network)
-~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
+=== Cloud Networks (cloud_network)
 [options="header"]
 |====================================================================
 |Method                     |Use
@@ -471,8 +465,7 @@ end
 |vms                        |Returns object's VMs
 |====================================================================
 
-[[Cloud Resource Quotas (cloud_resource_quota)]] Cloud Resource Quotas (cloud_resource_quota)
-~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
+=== Cloud Resource Quotas (cloud_resource_quota)
 [options="header"]
 |====================================================================
 |Method                     |Use
@@ -480,8 +473,7 @@ end
 |cloud_tenant               |Returns object's cloud tenant
 |====================================================================
 
-[[Cloud Subnets (cloud_subnet)]] Cloud Subnets (cloud_subnet)
-~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
+=== Cloud Subnets (cloud_subnet)
 [options="header"]
 |====================================================================
 |Method                     |Use
@@ -490,8 +482,7 @@ end
 |vms                        |Returns object's VMs
 |====================================================================
 
-[[Cloud Tenants (cloud_tenant)]] Cloud Tenants (cloud_tenant)
-~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
+=== Cloud Tenants (cloud_tenant)
 [options="header"]
 |====================================================================
 |Method                     |Use
@@ -505,16 +496,14 @@ end
 |cloud_resource_quotas      |Returns object's quotas
 |====================================================================
 
-[[Customization Template (customization_template)]] Customization Template (customization_template)
-~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
+=== Customization Template (customization_template)
 [options="header"]
 |====================================================================
 |Method                     |Use
 |Pxe_images                 |Returns customization templates pxe images
 |====================================================================
 
-[[Clusters (ems_cluster)]] Clusters (ems_cluster)
-~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
+=== Clusters (ems_cluster)
 [options="header"]
 |====================================================================
 |Method                     |Use
@@ -558,8 +547,7 @@ end
   end
 ----
 
-[[Management System Events (ems_event)]] Management System Events (ems_event)
-~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
+=== Management System Events (ems_event)
 [options="header"]
 |====================================================================
 |Method                     |Use
@@ -576,8 +564,7 @@ end
 |====================================================================
 
 
-[[Management System Folders (ems_folder)]] Management System Folders (ems_folder)
-~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
+=== Management System Folders (ems_folder)
 [options="header"]
 |====================================================================
 |Method                     |Use
@@ -587,8 +574,7 @@ end
 |folder_path(*options)      |Returns folders path
 |====================================================================
 
-[[Providers (ext_management_system)]] Providers (ext_management_system)
-~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
+=== Providers (ext_management_system)
 [options="header"]
 |====================================================================
 |Method                     |Use
@@ -638,8 +624,7 @@ end
   end
 ----
 
-[[Cloud Providers (ems_cloud)]] Cloud Providers (ems_cloud)
-^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
+==== Cloud Providers (ems_cloud)
 [options="header"]
 |====================================================================
 |Method                     |Use
@@ -654,8 +639,7 @@ end
 |====================================================================
 
 
-[[Firewall Rules (firewall_rule)]] Firewall Rules (firewall_rule)
-~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
+=== Firewall Rules (firewall_rule)
 [options="header"]
 |====================================================================
 |Method                     |Use
@@ -663,8 +647,7 @@ end
 |source_security_group      |Return object's source security group
 |====================================================================
 
-[[Flavors (flavor)]] Flavors (flavor)
-~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
+=== Flavors (flavor)
 [options="header"]
 |====================================================================
 |Method                     |Use
@@ -672,8 +655,7 @@ end
 |vms                        |Returns object's VMs
 |====================================================================
 
-[[Floating IPs (floating_ip)]] Floating IPs (floating_ip)
-~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
+=== Floating IPs (floating_ip)
 [options="header"]
 |====================================================================
 |Method                     |Use
@@ -682,8 +664,7 @@ end
 |cloud_tenant               |Returns object's cloud tenant
 |====================================================================
 
-[[Guest Applications (guest_application)]] Guest Applications (guest_application)
-~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
+=== Guest Applications (guest_application)
 [options="header"]
 |====================================================================
 |Method                     |Use
@@ -691,8 +672,7 @@ end
 |host                       |Returns objects Host
 |====================================================================
 
-[[Guest Device (guest_device)]] Guest Device (guest_device)
-~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
+=== Guest Device (guest_device)
 [options="header"]
 |====================================================================
 |Method                     |Use
@@ -702,8 +682,7 @@ end
 |network                    |Returns objects network
 |====================================================================
 
-[[Hardware (hardware)]] Hardware (hardware)
-~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
+=== Hardware (hardware)
 [options="header"]
 |====================================================================
 |Method                     |Use
@@ -717,8 +696,7 @@ end
 |mac_addresses              |Returns objects MAC addresses
 |====================================================================
 
-[[Hosts (host)]] Hosts (host)
-~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
+=== Hosts (host)
 [options="header"]
 |====================================================================
 |Method                     |Use
@@ -874,8 +852,7 @@ cpu_rdy = host.get_realtime_metric(:v_pct_cpu_ready_delta_summation, [15.minutes
   end
 ----
 
-[[Hosts: Vmware ESX (host_vmware_esx)]] Hosts: Vmware ESX (host_vmware_esx)
-^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
+==== Hosts: Vmware ESX (host_vmware_esx)
 [options="header"]
 |====================================================================
 |Method                                 |Use
@@ -891,8 +868,7 @@ cpu_rdy = host.get_realtime_metric(:v_pct_cpu_ready_delta_summation, [15.minutes
 |vmotion_enabled?(device = nil)         |Check to see if vMotion is enabled
 |====================================================================
 
-[[LAN (lan)]] LAN (lan)
-~~~~~~~~~~~~~~~~~~~~~~~
+=== LAN (lan)
 [options="header"]
 |====================================================================
 |Method                     |Use
@@ -903,8 +879,7 @@ cpu_rdy = host.get_realtime_metric(:v_pct_cpu_ready_delta_summation, [15.minutes
 |hosts                      |Returns objects Hosts
 |====================================================================
 
-[[Groups (miq_group)]] Groups (miq_group)
-~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
+=== Groups (miq_group)
 [options="header"]
 |====================================================================
 |Method                     |Use
@@ -949,9 +924,7 @@ cpu_rdy = host.get_realtime_metric(:v_pct_cpu_ready_delta_summation, [15.minutes
   end
 ----
 
-[[Request (miq_request)]] Request (miq_request)
-~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
-
+=== Request (miq_request)
 Request objects are submitted to ManageIQ Server for
 processing. After the request phase, the request becomes a task object.
 The table below shows the relationship between a request object and a
@@ -1071,16 +1044,14 @@ $evm.root["miq_request"].pending`
 |set_option(key, value)             |Sets the specified key/value pair for the object
 |====================================================================
 
-[[Automation Request (automation_request)]] Automation Request (automation_request)
-^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
+==== Automation Request (automation_request)
 [options="header"]
 |====================================================================
 |Method                     |Use
 |automation_tasks           |Returns objects automate tasks
 |====================================================================
 
-[[Host Provision Request (miq_host_provision_request)]] Host Provision Request (miq_host_provision_request)
-^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
+==== Host Provision Request (miq_host_provision_request)
 [options="header"]
 |====================================================================
 |Method                     |Use
@@ -1088,8 +1059,7 @@ $evm.root["miq_request"].pending`
 |ci_type                    |Returns the cloud infrastructure type: `host`
 |====================================================================
 
-[[VM Provision Request (miq_provision_request)]] VM Provision Request (miq_provision_request)
-^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
+==== VM Provision Request (miq_provision_request)
 [options="header"]
 |====================================================================
 |Method                                 |Use
@@ -1189,8 +1159,7 @@ _Example:_
 |vm_template                            |Returns the requests template
 |====================================================================
 
-[[Request Task (miq_request_task)]] Request Task (miq_request_task)
-~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
+=== Request Task (miq_request_task)
 [options="header"]
 |====================================================================
 |Method                                 |Use
@@ -1265,9 +1234,7 @@ _Returns:_
 |source                                 |Returns the source object. (The source, or input, object that the task runs against. In the case of provisioning, this would be the VM or template selected to be provisioned.)
 |====================================================================
 
-
-[[Automation Task (automation_task)]] Automation Task (automation_task)
-^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
+==== Automation Task (automation_task)
 [options="header"]
 |====================================================================
 |Method                 |Use
@@ -1275,8 +1242,7 @@ _Returns:_
 |status                 |Returns status of the task
 |====================================================================
 
-[[Host Provision Task (miq_host_provision)]] Host Provision Task (miq_host_provision)
-^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
+==== Host Provision Task (miq_host_provision)
 [options="header"]
 |====================================================================
 |Method                     |Use
@@ -1285,9 +1251,7 @@ _Returns:_
 |status                     |Returns status of host provision
 |====================================================================
 
-
-[[VM Provision Task (miq_provision)]] VM Provision Task (miq_provision)
-^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
+==== VM Provision Task (miq_provision)
 [options="header"]
 |====================================================================
 |Method                                 |Use
@@ -1486,8 +1450,7 @@ rescue => err
 end
 ----
 
-[[VM Provisioning for Clouds Task (miq_provision_cloud)]] VM Provisioning for Clouds Task (miq_provision_cloud)
-^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
+==== VM Provisioning for Clouds Task (miq_provision_cloud)
 [options="header"]
 |====================================================================
 |Method                     |Use
@@ -1501,8 +1464,7 @@ end
 |cloud_tenants              |Returns object's cloud tenant
 |====================================================================
 
-[[Service Template Provision Task (service_template_provision_task)]] Service Template Provision Task (service_template_provision_task)
-^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
+==== Service Template Provision Task (service_template_provision_task)
 [options="header"]
 |====================================================================
 |Method                         |Use
@@ -1518,8 +1480,7 @@ _Example:_
 |status                         |Returns the tasks status
 |====================================================================
 
-[[Service Reconfiguration Task (service_reconfigure_task)]] Service Reconfiguration Task (service_reconfigure_task)
-^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
+==== Service Reconfiguration Task (service_reconfigure_task)
 [options="header"]
 |====================================================================
 |Method                         |Use
@@ -1530,16 +1491,14 @@ _Example:_
 |finished(msg)                  |Sets the task to finished with the supplied message
 |====================================================================
 
-[[VM Migrate Task (vm_migrate_task)]] VM Migrate Task (vm_migrate_task)
-^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
+==== VM Migrate Task (vm_migrate_task)
 [options="header"]
 |====================================================================
 |Method             |Use
 |status             |Returns status of the migration task
 |====================================================================
 
-[[Proxies (miq_proxy)]] Proxies (miq_proxy)
-~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
+=== Proxies (miq_proxy)
 [options="header"]
 |====================================================================
 |Method             |Use
@@ -1547,8 +1506,7 @@ _Example:_
 |powershell(script, returns = 'string') |Submits a powershell script
 |====================================================================
 
-[[Servers (miq_server)]] Servers (miq_server)
-~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
+=== Servers (miq_server)
 These methods are available to the ManageIQ Server.
 [options="header"]
 |====================================================================
@@ -1575,8 +1533,7 @@ These methods are available to the ManageIQ Server.
   end
 ----
 
-[[Network (network)]] Network (network)
-~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
+=== Network (network)
 [options="header"]
 |====================================================================
 |Method             |Use
@@ -1584,8 +1541,7 @@ These methods are available to the ManageIQ Server.
 |guest_device       |Returns objects guest devices
 |====================================================================
 
-[[PXE Image (pxe_image)]] PXE Image (pxe_image)
-~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
+=== PXE Image (pxe_image)
 [options="header"]
 |====================================================================
 |Method                     |Use
@@ -1593,8 +1549,7 @@ These methods are available to the ManageIQ Server.
 |pxe_server                 |Returns objects pxe server
 |====================================================================
 
-[[PXE Server (pxe_server)]] PXE Server (pxe_server)
-~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
+=== PXE Server (pxe_server)
 [options="header"]
 |====================================================================
 |Method                     |Use
@@ -1608,8 +1563,7 @@ These methods are available to the ManageIQ Server.
 |windows_images             |Returns objects windows images
 |====================================================================
 
-[[Security Groups (security_group)]] Security Groups (security_group)
-~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
+=== Security Groups (security_group)
 [options="header"]
 |====================================================================
 |Method                     |Use
@@ -1620,8 +1574,7 @@ These methods are available to the ManageIQ Server.
 |vms                        |Returns object's VMs
 |====================================================================
 
-[[Service (service)]] Service (service)
-~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
+=== Service (service)
 [options="header"]
 |====================================================================
 |Method                     |Use
@@ -1654,8 +1607,7 @@ These methods are available to the ManageIQ Server.
 |set_dialog_option(key, value)  |Sets `value` of a dialog option specified by `key`
 |====================================================================
 
-[[Service Resource (service_resource)]] Service Resource (service_resource)
-~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
+=== Service Resource (service_resource)
 [options="header"]
 |====================================================================
 |Method             |Use
@@ -1665,8 +1617,7 @@ These methods are available to the ManageIQ Server.
 |source             |Returns the source object
 |====================================================================
 
-[[Service Template (service_template)]] Service Template (service_template)
-~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
+=== Service Template (service_template)
 [options="header"]
 |====================================================================
 |Method         |Use
@@ -1674,8 +1625,7 @@ These methods are available to the ManageIQ Server.
 |owner=(owner)  |Sets owner for the service template
 |====================================================================
 
-[[Snapshot (snapshot)]] Snapshot (snapshot)
-~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
+=== Snapshot (snapshot)
 These methods can be used on Snapshots
 
 [options="header"]
@@ -1688,9 +1638,7 @@ These methods can be used on Snapshots
 |remove                 |Removes specified snapshot
 |====================================================================
 
-
-[[Datastores (storage)]] Datastores (storage)
-~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
+=== Datastores (storage)
 [options="header"]
 |====================================================================
 |Method                     |Use
@@ -1730,8 +1678,7 @@ These methods can be used on Snapshots
   end
 ----
 
-[[Switch (switch)]] Switch (switch)
-~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
+=== Switch (switch)
 These methods can be used on Switches.
 
 [options="header"]
@@ -1742,8 +1689,7 @@ These methods can be used on Switches.
 |lans           |Returns switch's lans
 |====================================================================
 
-[[User (user)]] User (user)
-~~~~~~~~~~~~~~~~~~~~~~~~~~~
+=== User (user)
 These methods can be used on the currently logged on user.
 
 [options="header"]
@@ -1794,8 +1740,7 @@ These methods can be used on the currently logged on user.
   end
 ----
 
-[[Virtual Machines and Templates (vm_or_template)]] Virtual Machines and Templates (vm_or_template)
-~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
+=== Virtual Machines and Templates (vm_or_template)
 The following methods can be used on a virtual machine or template
 object.
 
@@ -1982,8 +1927,7 @@ _Example:_
   end
 ----
 
-[[VMs (vm)]] VMs (vm)
-^^^^^^^^^^^^^^^^^^^^^
+==== VMs (vm)
 [options="header"]
 |====================================================================
 |Method                     |Use
@@ -2017,8 +1961,7 @@ host = $evm.root['vm']
 cpu_rdy = vm.get_realtime_metric(:v_pct_cpu_ready_delta_summation, [15.minutes.ago.utc,5.minutes.ago.utc], :avg)
 ----
 
-[[VMs for Clouds (vm_cloud)]] VMs for Clouds (vm_cloud)
-^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
+==== VMs for Clouds (vm_cloud)
 [options="header"]
 |====================================================================
 |Method                 |Use
@@ -2031,8 +1974,7 @@ cpu_rdy = vm.get_realtime_metric(:v_pct_cpu_ready_delta_summation, [15.minutes.a
 |key_pairs              |Returns object's key pairs
 |====================================================================
 
-[[Windows Image (windows_image)]] Windows Image (windows_image)
-~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
+=== Windows Image (windows_image)
 [options="header"]
 |====================================================================
 |Method                     |Use
@@ -2040,8 +1982,7 @@ cpu_rdy = vm.get_realtime_metric(:v_pct_cpu_ready_delta_summation, [15.minutes.a
 |pxe_server                 |Returns the images pxe server.
 |====================================================================
 
-[[Creating Categories and Tags]] Creating Categories and Tags
-~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
+=== Creating Categories and Tags
 These methods are invoked using $evm.execute. See after the table for
 usage examples.
 
@@ -2073,8 +2014,7 @@ _Example:_
 `$evm.execute(tag_create', "department", :name => "finance", :description => "Finance")`
 |====================================================================
 
-[[Category and Tags Methods Example]] Category and Tags Methods Example
-^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
+==== Category and Tags Methods Example
 In this example, the VMDB is checked to see if the *Department* category
 exists. If it does, then a message is logged. If not, the category is
 created and a message is logged. Values are then added to the category.
@@ -2090,8 +2030,7 @@ else
   $evm.execute(tag_create', "department", :name => "finance", :description => "Finance")
 ----
 
-[[Quota]] Quota
-~~~~~~~~~~~~~~~
+=== Quota
 [options="header"]
 |====================================================================
 |Method(_parameter_)                                    |Use
